--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.bengroseclose.sleuthinspace">
 
+    <uses-permission
+        android:name="android.permission.WAKE_LOCK" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/sleuth_logo"
@@ -18,7 +21,7 @@
         </activity>
         <activity android:name=".SettingsPage" />
         <activity android:name=".Leaderboard" />
-        <activity android:name=".Timer"></activity>
+        <activity android:name=".Game"></activity>
     </application>
 
 </manifest>
